--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ version: 2.1
 
 orbs:
   python: circleci/python@2.1.1
+  docker: circleci/docker@2.2.0
+  azure-cli: circleci/azure-cli@1.2.2
 
 jobs:
   build_and_test:
@@ -11,8 +13,15 @@ jobs:
       - python/install-packages:
           pkg-manager: pip
       - run:
+          name: Linting
+          command: flake8
+      - run:
           name: Run tests
           command: python -m pytest
+
+#  dockerize:
+
+#  deploy:
 
 workflows:
   test_my_app:
