--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           pkg-manager: pip
       - run:
           name: Linting
-          command: flake8
+          command: python -m flake8
       - run:
           name: Run tests
           command: python -m pytest
@@ -27,3 +27,10 @@ workflows:
   test_my_app:
     jobs:
       - build_and_test
+  build-and-publish-docker-image:
+    jobs:
+      - docker/publish:
+          image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+          filters:
+            branches:
+              only: master
