--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,8 @@ workflows:
       - azure-acr/build-and-push-image:
           login-server-name: oclettings.azurecr.io
           registry-name: oclettings
-          repo: oclettings.azurecr.io/app
-          tag: $CIRCLE_TAG
+          repo: app
           requires:
-            - build_and_test
             - docker/publish
           filters:
             branches:
