--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.6.0
+certifi==2023.5.7
 Django==3.0
+django-environ==0.10.0
 entrypoints==0.3
 exceptiongroup==1.1.1
 flake8==3.7.0
@@ -12,6 +14,8 @@ pyflakes==2.1.1
 pytest==7.3.1
 pytest-django==3.9.0
 pytz==2023.3
+sentry-sdk==1.22.2
 six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
+urllib3==1.26.15
