--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ workflows:
           login-server-name: oclettings.azurecr.io
           registry-name: oclettings
           repo: app
+          extra_build_args: '-e SECRET_KEY=$SECRET_KEY'
           requires:
             - docker/publish
           filters:
