--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ workflows:
       - build_and_test
       - docker/publish:
           image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
-          extra_build_args: '-e SECRET_KEY=$SECRET_KEY'
+          extra_build_args: 'SECRET_KEY=$SECRET_KEY'
           requires:
             - build_and_test
           filters:
